# OC_P12_Epic

./: .coverage  .gitignore  README.md  init_database.py  pyproject.toml  requirements.txt
src/: cli_epic.py  database.py  init_db.py  main.py  models.py  server_epic.py
src/cli_app/: controller.py  ctl_collab.py  views.py
src/core/: database.py  db_manager.py  db_service.py
src/models/: model.py
src/server/: api_collab.py  api_work.py  config.py  db_decorator.py  db_manager.py  middlewares.py  models.py  permissions.py  utils.py
src/tests/: test_api.py  test_controller.py  test_db.py  test_db_manager.py  test_db_service.py  test_perm_validator.py
