[project]
name = "oc-p12-epic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=23.1.0",
    "click>=8.1.8",
    "coverage>=7.6.12",
    "getch>=1.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "sentry-sdk[starlette]>=2.24.1",
    "sqlalchemy>=2.0.38",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]
